reportbug (4.5) UNRELEASED; urgency=low

  * reportbug/__init__.py
    - bump reportbug version

 -- Sandro Tosi <morph@debian.org>  Mon, 25 May 2009 22:24:50 +0200

reportbug (4.4) unstable; urgency=low

  * reportbug/__init__.py
    - bump reportbug version
  * bin/reportbug, reportbug/utils.py
    - enforce mua check; thanks to Carl Chenet for the patch; Closes: #530499

 -- Sandro Tosi <morph@debian.org>  Mon, 25 May 2009 20:09:10 +0200

reportbug (4.3) unstable; urgency=low

  [ Luca Bruno ]
  * reportbug/ui/gtk2_ui.py:
    - fix crash when showing menu options; Closes: #526628
    - make the textbox containing error information wider
    - implement show_report() : it allows querybts to work with gtk2 UI; thanks
      to James Vega for the report;  Closes: #525762

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump reportbug version
  * reportbug/submit.py
    - skip to show the ack message if fails to send the email to all the
      recipients; thanks to Cyril Brulebois for the report and to Carl Chenet
      for the patch; Closes: #524640
    - limit tries to max 3 (1 try + 2 retries) to deliver the message; thanks to
      alecs1 for the report and to Carl Chenet for the patch; Closes: #489447
  * reportbug/utils.py, bin/reportbug
    - added 'mua_exists' function to check existence of the selected MUA; thanks
      to Bernhard R. Link for the report and to Carl Chenet for the patch;
      Closes: #363920
  * debian/control
    - tight dependency of reportbug package to python-reportbug to be the same
      of source version
  * bin/reportbug
    - display the correct message when saving the report into a file (using the
      '-o' option); thanks to Timo Juhani Lindfors for the report and to Carl
      Chenet for the patch; Closes: #496083
    - added a menu option to detach attachment files; thanks to Michael Beattie
      for the report and to Carl Chenet for the patch; Closes: #206318